--- a/config/database.yml
+++ b/config/database.yml
@@ -1,22 +1,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: new_octoshell_development
-  username: dbuser_dev
-  password: pass
-
-test:
-  adapter: postgresql
-  encoding: unicode
-  database: new_octoshell_test
-  username: dbuser_dev
-  password: pass
-
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: new_octoshell
-  username: <%= ENV['APP_DB_USER'] %>
-  password: <%= ENV['APP_DB_PASSWORD'] %>
-  pool: 10
-  min_messages: warning
+  database: top50_development
+  username: octo
+  password: 123456
+  port: <%= ENV['DATABASE_PORT'] || '5432' %>
+  host: <%= ENV['DATABASE_HOST'] %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
